--- a/src/config/config.local.yaml
+++ b/src/config/config.local.yaml
@@ -4,6 +4,11 @@ http:
 
 db:
   mysql:
-    url: "localhost"
+    type: "mysql"
+    autoLoadEntities: true # 自动加载实体
+    host: "localhost"
     port: 3306
-    database: "yaml-db"
+    username: "root"
+    password: "lynn0922.."
+    database: "management"
+    synchronize: true # 是否自动同步实体文件,生产环境建议关闭
