--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-validator": "^0.14.0",
     "js-yaml": "^4.1.0",
     "mysql2": "^3.5.2",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
